# agente-rag-gti

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_index.py  run_eval.py
